--- a/Vector Fun.ipynb
+++ b/Vector Fun.ipynb
@@ -193,20 +193,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "vector: [9 4]\n",
+      "vector: 13\n",
       "magnitude:  12.999999999999998\n"
      ]
     }
    ],
    "source": [
-    "print('vector:', np.multiply(vector_a, vector_a))\n",
+    "print('vector:', np.dot(vector_a, vector_a))\n",
     "print('magnitude: ', mag(vector_a)*mag(vector_a))"
    ]
   },
@@ -219,19 +219,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "vector:  [24 14]\n"
+      "vector:  38\n"
      ]
     }
    ],
    "source": [
-    "print('vector: ', np.multiply(vector_a, vector_b))"
+    "print('vector: ', np.dot(vector_a, vector_b))"
    ]
   },
   {
@@ -244,23 +244,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dot product of a and a rotated:  12\n",
-      "multiply:  [6 6]\n"
+      "dot product of a and a rotated:  12\n"
      ]
     }
    ],
    "source": [
     "ar = rot90(vector_a)\n",
     "\n",
-    "print('dot product of a and a rotated: ', np.dot(vector_a, ar))\n",
-    "print('multiply: ', np.multiply(vector_a, ar))"
+    "print('dot product of a and a rotated: ', np.dot(vector_a, ar))"
    ]
   }
  ],
